package model;

public class Table {

}
